linux/iptables.up.rules
# Generated by iptables-save v1.4.2 on Mon Jan 31 17:56:12 2011
*mangle
:PREROUTING ACCEPT [27343:16186790]
:INPUT ACCEPT [27343:16186790]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [25585:10672267]
:POSTROUTING ACCEPT [25585:10672267]
COMMIT
# Completed on Mon Jan 31 17:56:12 2011
# Generated by iptables-save v1.4.2 on Mon Jan 31 17:56:12 2011
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT 
-A INPUT -d 127.0.0.0/8 -i ! lo -j REJECT --reject-with icmp-port-unreachable 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT 
#-A INPUT -p tcp -m tcp --dport 3000 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
#-A INPUT -p tcp -m state --state NEW -m tcp --dport 32322 -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7 
-A INPUT -j REJECT --reject-with icmp-port-unreachable 
-A FORWARD -j REJECT --reject-with icmp-port-unreachable 
-A OUTPUT -j ACCEPT 
COMMIT
# Completed on Mon Jan 31 17:56:12 2011
# Generated by iptables-save v1.4.2 on Mon Jan 31 17:56:12 2011
*nat
:PREROUTING ACCEPT [2504:144893]
:POSTROUTING ACCEPT [2166:131942]
:OUTPUT ACCEPT [2166:131942]
-A PREROUTING -i venet0 -p tcp -m tcp --dport 22 -j REDIRECT --to-ports 32322 
COMMIT
# Completed on Mon Jan 31 17:56:12 2011
