linux/iptables2.txt
*filter
:INPUT   DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT  ACCEPT [0:0]

-A INPUT -i lo -j ACCEPT
-A INPUT -s 127.0.0.0/8 -d 127.0.0.0/8 -j ACCEPT
#-A INPUT -s 192.168.0.0/16 -j DROP
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
#-A INPUT -p tcp -m state --state NEW -m tcp --dport 25 -j ACCEPT
#-A INPUT -p tcp -m state --state NEW -m tcp --dport 110 -j ACCEPT
#-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
#-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p icmp --icmp-type echo-request -j ACCEPT
-A INPUT -p icmp --icmp-type echo-reply   -j ACCEPT
-A INPUT -p udp --sport 53 -j ACCEPT
-A INPUT -p tcp -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p tcp -m state --state NEW ! --syn -j DROP
COMMIT





iptables -F
iptables -A INPUT   -j ACCEPT
iptables -A OUTPUT  -j ACCEPT
iptables -A FORWARD -j ACCEPT




# iptables -L

Allowing Established Sessions
# iptables -A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

Allowing Incoming Traffic on Specific Ports
# iptables -A INPUT -p tcp --dport 22 -j ACCEPT
# iptables -A INPUT -p tcp --dport 80 -j ACCEPT

Blocking Traffic
# iptables -A INPUT -j DROP

Loopback port(User insert)
# iptables -I INPUT 1 -i lo -j ACCEPT

Logging
# iptables -I INPUT 5 -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7

# sudo bash -c "iptables-save > /etc/iptables.rules"




# sudo nano /etc/network/if-pre-up.d/iptables-up
	#!/bin/sh
	iptables-restore < /etc/iptables.rules
	exit 0
# sudo chmod +x /etc/network/if-post-down.d/iptables-up
# sudo nano /etc/network/if-post-down.d/iptables-down
	#!/bin/sh
	iptables-save -c > /etc/iptables.rules
	if [ -f /etc/iptables.downrules ]; then
	   iptables-restore < /etc/iptables.downrules
	fi
	exit 0
# sudo chmod +x /etc/network/if-pre-up.d/iptables-down
